--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,6 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
-apply plugin: 'checkstyle'
-apply plugin: 'findbugs'
 
 group = 'com.github.vdemeester'
 version = '0.1.0-SNAPSHOT'
@@ -20,9 +18,9 @@ sourceSets {
         java {
             compileClasspath += main.output + test.output
             runtimeClasspath += main.output + test.output
-            srcDir file('src/integration-test/java')
+            srcDir file('src/integrationTest/java')
         }
-        resources.srcDir file('src/integration-test/resources')
+        resources.srcDir file('src/integrationTest/resources')
     }
 }
 
@@ -35,6 +33,10 @@ configurations {
 dependencies {
     compile 'com.github.docker-java:docker-java:3.0.0-RC3'
     compile 'org.slf4j:slf4j-api:1.7.14'
+    compile 'org.yaml:snakeyaml:1.17'
+    compile 'ch.qos.logback:logback-classic:1.1.6'
+
+
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.3.0'
@@ -47,7 +49,7 @@ task integrationTest(type: Test) {
     classpath = sourceSets.integrationTest.runtimeClasspath
     //If you want to ensure that integration tests are run every time when you invoke
     //this task, uncomment the following line.
-    //outputs.upToDateWhen { false }
+    outputs.upToDateWhen { false }
 }
 
 //Ensure that the check task fails the build if there are failing integration tests.
