Update travis configuration to use sudo builds
This is to be able to build it against a specific version of docker and
do more advanced stuff (like running different daemon version, etc..).

And… remove a checkstyle thingy.

Signed-off-by: Vincent Demeester <vincent@sbr.pm>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
-language: Java
+sudo: required
 
-jdk:
-  - oraclejdk8
-  - oraclejdk7
-  - openjdk7
+services:
+  - docker
+
+install:
+  - sudo service docker stop
+  - sudo curl https://get.docker.com/builds/Linux/x86_64/docker-1.10.3 -o /usr/bin/docker
+  - sudo chmod +x /usr/bin/docker
+  - sudo service docker start
+
+before_script:
+  - docker version
+
+script:
+  - ./gradlew check
