--- a/build.gradle
+++ b/build.gradle
@@ -1,65 +1,58 @@
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'idea'
-apply plugin: 'eclipse'
-
-group = 'com.github.vdemeester'
-version = '0.1.0-SNAPSHOT'
-
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
-
-jar {
-    baseName = 'maccchiato-compose'
-}
-
-sourceSets {
-    integrationTest {
-        java {
-            compileClasspath += main.output + test.output
-            runtimeClasspath += main.output + test.output
-            srcDir file('src/integrationTest/java')
-        }
-        resources.srcDir file('src/integrationTest/resources')
+allprojects {
+    group = 'com.github.vdemeester'
+    version = '0.1.0-SNAPSHOT'
+    repositories {
+        mavenCentral()
     }
 }
 
+subprojects { subproject ->
 
-configurations {
-    integrationTestCompile.extendsFrom testCompile
-    integrationTestRuntime.extendsFrom testRuntime
+    apply plugin: 'java'
+    apply plugin: 'maven'
+    apply plugin: 'idea'
+    apply plugin: 'eclipse'
+
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+
 }
 
-dependencies {
-    compile 'com.github.docker-java:docker-java:3.0.0-RC3'
-    compile 'org.slf4j:slf4j-api:1.7.14'
-    compile 'org.yaml:snakeyaml:1.17'
-    compile 'ch.qos.logback:logback-classic:1.1.6'
+project(':macchiato-compose-core') {
 
+    description = "Macchiato Compose Core"
 
+    sourceSets {
+        integrationTest {
+            java {
+                compileClasspath += main.output + test.output
+                runtimeClasspath += main.output + test.output
+            }
+        }
+    }
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.assertj:assertj-core:3.3.0'
-}
+    configurations {
+        integrationTestCompile.extendsFrom(testCompile)
+        integrationTestRuntime.extendsFrom(testCompile)
+    }
+    dependencies {
+        compile 'com.github.docker-java:docker-java:3.0.0-RC3'
+        compile 'org.slf4j:slf4j-api:1.7.14'
+        compile 'org.yaml:snakeyaml:1.17'
+        compile 'ch.qos.logback:logback-classic:1.1.6'
 
-//Create the task that runs the integration tests found from the
-//configured source directory and uses the correct classpath.
-task integrationTest(type: Test) {
-    testClassesDir = sourceSets.integrationTest.output.classesDir
-    classpath = sourceSets.integrationTest.runtimeClasspath
-    //If you want to ensure that integration tests are run every time when you invoke
-    //this task, uncomment the following line.
-    outputs.upToDateWhen { false }
-}
+        integrationTestCompile 'junit:junit:4.12'
+        integrationTestCompile 'org.assertj:assertj-core:3.3.0'
+    }
 
-//Ensure that the check task fails the build if there are failing integration tests.
-check.dependsOn integrationTest
-//Ensure that our unit tests are run before our integration tests
-integrationTest.mustRunAfter test
+    task integrationTest(type: Test) {
+        testClassesDir = sourceSets.integrationTest.output.classesDir
+        classpath = sourceSets.integrationTest.runtimeClasspath
+        outputs.upToDateWhen { false }
+    }
 
-
-repositories {
-    mavenCentral()
+    check.dependsOn integrationTest
+    integrationTest.mustRunAfter test
 }
 
 task wrapper(type: Wrapper) {
